# Rete

./: Dockerfile  LICENSE  Readme.md  file.pcl  file.pkl  file2.pcl  nf.py
Dataset-Information/: C_dataset_info.txt  bg107_info.txt  mb37_info.txt  p28_dataset_info.txt
Rete-Trident/: Dockerfile  README.md
Rete-Trident/main/: synthesis.py
Rete-Trident/tests/assignment/: patch.smt2  run
Rete-Trident/tests/simple-rvalue/: a.out  run  t2.smt2  template.json  test.c  vc.smt2
Rete-Trident/tests/struct_test/: patch.smt2
Scripts/: plot.py  plot_c.py  time_data.json
coconut/: README.md  test.sh  train.sh  train_all.sh
coconut/source/: __init__.py
coconut/source/training/: train.py
eval/coreutils_test/coreutils_c160afe/: .conftest.o.bc  .conftest1.o.bc  .conftest2.o.bc
eval/coreutils_test/coreutils_c160afe/lib/: .acl-errno-valid.o.bc  .acl-internal.o.bc  .af_alg.o.bc  .allocator.o.bc  .areadlink-with-size.o.bc  .areadlink.o.bc  .areadlinkat.o.bc  .argmatch.o.bc  .argv-iter.o.bc  .asnprintf.o.bc  .at-func2.o.bc  .backup-find.o.bc  .backup-rename.o.bc  .backupfile.o.bc  .base32.o.bc  .base64.o.bc  .basename-lgpl.o.bc  .basename.o.bc  .binary-io.o.bc  .bitrotate.o.bc  .buffer-lcm.o.bc  .c-ctype.o.bc  .c-strcasecmp.o.bc  .c-strncasecmp.o.bc  .c-strtod.o.bc  .c-strtold.o.bc  .canon-host.o.bc  .canonicalize.o.bc  .careadlinkat.o.bc  .chdir-long.o.bc  .chmodat.o.bc  .chownat.o.bc  .cl-strtod.o.bc  .cl-strtold.o.bc  .cloexec.o.bc  .close-stream.o.bc  .closein.o.bc  .closeout.o.bc  .copy-acl.o.bc  .copy-file-range.o.bc  (+220 more)
eval/coreutils_test/test_c160afe/: run.sh
rete-feature-extracter/: CMakeCache.txt  CMakeLists.txt  Config.h  Config.h.in  Dockerfile  Globals.h.in  Makefile  README.md  cmake_install.cmake  rete_runner.py  rete_runner_wireshark.py  wireshark_install_deps.sh
rete-feature-extracter/infra/: Dockerfile  download_build_install_llvm.sh
rete-feature-extracter/learning/: direct_code_bert_run.py  du_chain_learning.py  features_and_seq.py  file.py  prophet.py
rete-feature-extracter/rete/: CMakeLists.txt  Makefile  cmake_install.cmake  feature_matchers.cpp  feature_matchers.h  feature_vector.cpp  feature_vector.h  rete_utils.cpp  rete_utils.h
rete-feature-extracter/tests/: test.cpp
rete-feature-extracter/tools/: CMakeLists.txt  Makefile  cmake_install.cmake  rete.cpp
(+133 files in other folders)
